JacksonRiver-salesforce/jra/src/objects/JRA_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <inlineHelpText>What was error thrown?</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Record__c</fullName>
        <formula>If (NOT(ISBLANK(Record_Id__c)),
HYPERLINK(&quot;/&quot; + Record_Id__c , &quot;Link to Contact&quot;, &quot;__blank&quot;) ,
&quot;&quot;)</formula>
        <label>Link to Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <inlineHelpText>Record Id of Contact where available</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>JRA Error Log</label>
    <nameField>
        <displayFormat>JRAE-{00000}</displayFormat>
        <label>JRA Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JRA Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>